; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_EXT_coordinate_frame.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_EXT_coordinate_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_EXT_coordinate_frame = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"glTangent3bEXT\00", align 1
@glad_glTangent3bEXT = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"glTangent3bvEXT\00", align 1
@glad_glTangent3bvEXT = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [15 x i8] c"glTangent3dEXT\00", align 1
@glad_glTangent3dEXT = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [16 x i8] c"glTangent3dvEXT\00", align 1
@glad_glTangent3dvEXT = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [15 x i8] c"glTangent3fEXT\00", align 1
@glad_glTangent3fEXT = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [16 x i8] c"glTangent3fvEXT\00", align 1
@glad_glTangent3fvEXT = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [15 x i8] c"glTangent3iEXT\00", align 1
@glad_glTangent3iEXT = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [16 x i8] c"glTangent3ivEXT\00", align 1
@glad_glTangent3ivEXT = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [15 x i8] c"glTangent3sEXT\00", align 1
@glad_glTangent3sEXT = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [16 x i8] c"glTangent3svEXT\00", align 1
@glad_glTangent3svEXT = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [16 x i8] c"glBinormal3bEXT\00", align 1
@glad_glBinormal3bEXT = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [17 x i8] c"glBinormal3bvEXT\00", align 1
@glad_glBinormal3bvEXT = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [16 x i8] c"glBinormal3dEXT\00", align 1
@glad_glBinormal3dEXT = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [17 x i8] c"glBinormal3dvEXT\00", align 1
@glad_glBinormal3dvEXT = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [16 x i8] c"glBinormal3fEXT\00", align 1
@glad_glBinormal3fEXT = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [17 x i8] c"glBinormal3fvEXT\00", align 1
@glad_glBinormal3fvEXT = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [16 x i8] c"glBinormal3iEXT\00", align 1
@glad_glBinormal3iEXT = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [17 x i8] c"glBinormal3ivEXT\00", align 1
@glad_glBinormal3ivEXT = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [16 x i8] c"glBinormal3sEXT\00", align 1
@glad_glBinormal3sEXT = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [17 x i8] c"glBinormal3svEXT\00", align 1
@glad_glBinormal3svEXT = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [20 x i8] c"glTangentPointerEXT\00", align 1
@glad_glTangentPointerEXT = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [21 x i8] c"glBinormalPointerEXT\00", align 1
@glad_glBinormalPointerEXT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_EXT_coordinate_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_EXT_coordinate_frame(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_EXT_coordinate_frame, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %51

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glTangent3bEXT, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glTangent3bvEXT, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glTangent3dEXT, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glTangent3dvEXT, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glTangent3fEXT, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glTangent3fvEXT, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glTangent3iEXT, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glTangent3ivEXT, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glTangent3sEXT, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glTangent3svEXT, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glBinormal3bEXT, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glBinormal3bvEXT, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glBinormal3dEXT, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glBinormal3dvEXT, align 8
  %35 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %36 = call i64 %35(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i64 0, i64 0))
  store i64 %36, i64* @glad_glBinormal3fEXT, align 8
  %37 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %38 = call i64 %37(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.15, i64 0, i64 0))
  store i64 %38, i64* @glad_glBinormal3fvEXT, align 8
  %39 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %40 = call i64 %39(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.16, i64 0, i64 0))
  store i64 %40, i64* @glad_glBinormal3iEXT, align 8
  %41 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %42 = call i64 %41(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.17, i64 0, i64 0))
  store i64 %42, i64* @glad_glBinormal3ivEXT, align 8
  %43 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %44 = call i64 %43(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.18, i64 0, i64 0))
  store i64 %44, i64* @glad_glBinormal3sEXT, align 8
  %45 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %46 = call i64 %45(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.19, i64 0, i64 0))
  store i64 %46, i64* @glad_glBinormal3svEXT, align 8
  %47 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %48 = call i64 %47(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.20, i64 0, i64 0))
  store i64 %48, i64* @glad_glTangentPointerEXT, align 8
  %49 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %50 = call i64 %49(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.21, i64 0, i64 0))
  store i64 %50, i64* @glad_glBinormalPointerEXT, align 8
  br label %51

51:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
